--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@
 supabase-*.sql
 complete-database-schema.sql
 
-# Development tools (exclude from production)
-src/components/DevTools/
-src/components/MobileDebugConsole/
-STEP-BY-STEP-SIGNIN.md
-URGENT_WORLD_PORTAL_UPDATE.md
-
 
 # dependencies
 /node_modules
@@ -52,7 +46,7 @@ yarn-error.log*
 next-env.d.ts
 !.env.sample
 
-# My_own_created_files
+# My_own_files
 Plan.md
 Createdfiles.md
 toself.md
