🚀 Production Ready: Hide dev tools from production
- Added DevTools and MobileDebugConsole to .gitignore for main branch
- Added development markdown files to .gitignore
- Conditional rendering: dev tools only show when NEXT_PUBLIC_SHOW_DEV_TOOLS=true
- Dynamic imports with loading fallbacks for clean production builds
- Ready for main branch deployment with clean production experience

Production environment will have no dev tools, clean interface

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 supabase-*.sql
 complete-database-schema.sql
 
+# Development tools (exclude from production)
+src/components/DevTools/
+src/components/MobileDebugConsole/
+STEP-BY-STEP-SIGNIN.md
+URGENT_WORLD_PORTAL_UPDATE.md
+
 
 # dependencies
 /node_modules
