🚫 Exclude development files from production
- Added SQL schema files to gitignore (supabase-*.sql)
- Added development documentation to gitignore (toself.md, etc.)
- Keep production branch clean from dev-only files

Production will not include development documentation or database schema files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Database schema files (development only)
+supabase-*.sql
+complete-database-schema.sql
+
+# Development documentation (exclude from production)  
+toself.md
+STEP-BY-STEP-SIGNIN.md
+URGENT_WORLD_PORTAL_UPDATE.md
+
 # dependencies
 /node_modules
 /.pnp
