--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ yarn-error.log*
 /src/lib/database.ts
 /src/app/api/users/
 /src/components/DevButtons/
+/src/components/DevSignOut/
 .env.local
 .env.development
 .env.production
