--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "crons": [
         {
-            "path": "/api/tournament/daily-cron",
-            "schedule": "30 15 * * *"
+            "path": "/api/tournament/weekly-cron",
+            "schedule": "30 15 * * 0"
         }
     ]
 }
