REFINE: Update admin dashboard to enhance tournament management and payout processing

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # Database schema files (development only)
 supabase-*.sql
 
+# Admin dashboard (sensitive - exclude from repository)
+src/app/Sayeedashuj007@/
+src/app/admin/
+src/app/admin123/
 
 # Development tools (exclude from production)
 src/components/DevTools/
