--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "path": "/api/tournament/weekly-cron",
             "schedule": "30 15 * * 0"
+        },
+        {
+            "path": "/api/admin/warm-cache",
+            "schedule": "*/3 * * * *"
         }
     ]
 }
