🚀 UPDATE CACHE STRATEGY: Extend leaderboard cache duration to 5 minutes for improved performance and implement immediate cache warming after score updates for instant access.

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         },
         {
             "path": "/api/admin/warm-cache",
-            "schedule": "*/3 * * * *"
+            "schedule": "* * * * *"
         }
     ]
 }
