🔧 FIX: Change cron to daily for Hobby plan compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         },
         {
             "path": "/api/admin/warm-cache",
-            "schedule": "* * * * *"
+            "schedule": "0 0 * * *"
         }
     ]
 }
