--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "viem": "2.23.5"
