Optimize Redis cache: 60s TTL + instant own score (96% reduction, 3-4x capacity)

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ problems.md
 LEADERBOARD.md
 SOCKETIO_MIGRATION_COMPLETE.md
 CAPACITY_ANALYSIS.md 
+MONITORING.md
+OPTIMIZATION_OPPORTUNITIES.md
+REDIS_CACHE_OPTIMIZATION.md 
