--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Internal documentation (security sensitive)
+ISSUES.md
+
 # Database schema files (development only)
 supabase-*.sql
 
