Add Socket.IO WebSocket fix documentation and clean up logs
- Created SOCKETIO_WEBSOCKET_FIX.md with complete analysis
- Documented root cause: multiple socket instances from component cleanup
- Explained why disconnectSocket() in SocketIOContext was the bug
- Removed all debug console logs from socketio.ts (production ready)
- Documentation includes future debugging steps if issue returns

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,7 @@ PROD_FUNCTIONS_ANALYSIS.md
 .env*.local
 OPTIMIZATION.MD
 
+SOCKETIO_WEBSOCKET_FIX.md
 # SQL migration scripts (internal deployment only)
 sql-scripts/
 
