fix: Update .gitignore for architecture documentation and backup files; refine modal button styles for better visibility

--- a/.gitignore
+++ b/.gitignore
@@ -102,4 +102,7 @@ sql-scripts/
 
 # Database backups (local only)
 backup-*.sql
-backup-*.txt 
+backup-*.txt
+
+# Architecture documentation (internal reference only)
+ARCHITECTURE_FLOWCHART.md 
