--- a/.gitignore
+++ b/.gitignore
@@ -105,4 +105,7 @@ backup-*.sql
 backup-*.txt
 
 # Architecture documentation (internal reference only)
-ARCHITECTURE_FLOWCHART.md 
+ARCHITECTURE_FLOWCHART.md
+FLAPPY_UFO_ARCHITECTURE.md
+ARCHITECTURE_SIMPLE.md
+TOOLS_FLOWCHART.md 
