--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,11 @@ ARCHITECTURE_FLOWCHART.md
 FLAPPY_UFO_ARCHITECTURE.md
 ARCHITECTURE_SIMPLE.md
 TOOLS_FLOWCHART.md 
+
+# Grant application materials (private, do not commit)
+grant.md
+GRANT_FINAL_CLEAN.md
+HONEST_GRANT_DATA.md
+REPEAT_VISITOR_ANALYSIS.md
+DAU_WAU_SOLUTION.md
+INTERVIEW_PREP.md 
