--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.24",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19",
     "eruda": "^3.4.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
